# waterlagen

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  mkdocs_serve.cmd  objects.inv  open-vscode.cmd  pixi.toml  pyproject.toml
.github/workflows/: docs.yml  release-pypi.yml  test-cov.yml
bewerkingen/: index.html
datastore/: index.html
docs/: api.md  bewerkingen.md  datastore.md  downloads.md
docs/notebooks/: .gitignore  ahn.ipynb  dem_alkmaar.ipynb
docs/reference/: ahn.md  bag.md  bgt.md  datastore.md
docs/stylesheets/: extra.css
downloads/: index.html
notebooks/dem_alkmaar/: index.html
reference/ahn/: index.html
reference/bag/: index.html
reference/bgt/: index.html
reference/datastore/: index.html
scripts/: ahn.py  bag.py  bump_version.py  dem.py  download_bag.py  download_data.py  process_ahn.py
search/: search_index.json
src/waterlagen/: __init__.py  datastore.py  logger.py  raster.py  settings.py
src/waterlagen/ahn/: __init__.py  api_config.py  download.py  interpolate.py
src/waterlagen/bag/: __init__.py  download.py  rasterize.py
src/waterlagen/bgt/: __init__.py
src/waterrasters/: __init__.py  ahn.py  ahn_api_config.py  api_config.py  bag.py  bgt.py  settings.py
tests/: conftest.py  test_ahn_interpolate.py  test_ahn_services.py  test_download_ahn.py  test_download_bag.py  test_download_bgt.py  test_logger.py  test_raster.py  test_rasterize_bag.py
