[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterlagen"
description = "GIS-lagen waterbeheer."
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    { name = "Wouter van Esse", email = "w.vanesse@hhnk.nl" }
]
license = { text = "MIT" }

requires-python = ">=3.13"
dependencies = [
    "gdal",
    "geopandas",
    "pydantic",
    "pydantic-settings",
    "rasterio"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "src/waterlagen/__init__.py"

