[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterlagen"
description = "Waterlagen: rasters en features voor toepassing in waterbeheer"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    { name = "Wouter van Esse", email = "w.vanesse@hhnk.nl" }
]
license = { text = "MIT" }

requires-python = ">=3.11"
dependencies = [
    "gdal",
    "geopandas",
    "pydantic",
    "pydantic-settings",
    "rasterio",
    "numpy",
    "requests",
    "shapely",
    "affine"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "src/waterlagen/__init__.py"

