[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waterlagen"
description = "Waterlagen: rasters en features downloaden en bewerken voor toepassing in waterbeheer"
readme = "README.md"
keywords = ["hydrologie", "waterbeheer", "PDOK", "BAG", "BGT", "AHN"]
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    { name = "Wouter van Esse", email = "w.vanesse@hhnk.nl" }
]
license = { text = "MIT" }

urls = { "Source" = "https://github.com/d2hydro/waterlagen", "Documentation" = "https://d2hydro.github.io/waterlagen/" }

requires-python = ">=3.11"
dependencies = [
    "gdal",
    "geopandas",
    "pydantic",
    "pydantic-settings",
    "rasterio",
    "numpy",
    "requests",
    "shapely",
    "affine"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "src/waterlagen/__init__.py"

